--- a/SimoFiles.css
+++ b/SimoFiles.css
@@ -6,6 +6,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             font-weight: bold;
           direction:ltr;
+            text-align:left;
         }
 
         .exercise-title {
